* Add export of selection string
* Load plugins from local user directory
* Manage tree_state attribute
* Add simple tree_state support on form view
* Change range operator of search widget to be included
* Explicitly set value of parent field

Version 3.2.0 - 2014-04-21
* Bug fixes (see mercurial logs for details)
* Add option to show revisions
* Add a multi selection widget for many2many
* Remove auto-refresh
* Add support of domain for non-relation field
* Allow drag & drop on the attachment button
* Replace sha widget by password
* Add Len to PYSON
* Use a pool of connection
* Manage client actions from button and wizard
* Add tree_invisible attribute to button in tree view
* Add buttons of the view in actions menu
* Don't evaluate anymore relate action with the record
* Paste on editable list create new records if needed
* Drop support of Python 2.6
* Allow to search on rec_name of Reference fields
* Use local timezone
* Sanitize report file extension

Version 3.0.0 - 2013-10-21
* Bug fixes (see mercurial logs for details)
* Add factor on number widgets
* Add calendar view
* Add URL entry
* Remove request

Version 2.8.0 - 2013-04-22
* Bug fixes (see mercurial logs for details)
* Manage dynamic label
* Manage prefix, suffix on tree view
* Manage selection_change_with on Selection and Reference fields
* Add Dict fields on form
* Remove Goto
* Add global search
* Add toggle button for menu
* Replace shortcuts by menu favorites
* Move Plugins into toolbar Actions
* Add url to list view
* Add dynamic icon for url
* Add completion on Many2One, Many2Many and One2Many
* Add bookmark on search widget
* Manage domains on Action Window
* Use range for Date/Time fields in filter box
* Allow multi-selection for Selection field in filter box

Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)
* Allow to paste in editable list view
* Manage readonly state on group
* Remove "Please wait" box
* Refactorize date widgets
* Manage tuple on Reference